<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/text_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/number"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/text_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_play"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/score_zero"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/text_guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_count"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/hint_guess"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/text_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_number"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="Sample Console output. This should take multiple lines."
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold|italic" />

    <ImageButton
        android:id="@+id/button_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_status"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/play_button"
        android:src="@drawable/ic_button_play" />

    <Button
        android:id="@+id/button_guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button_play"
        android:layout_below="@+id/text_guess"
        android:text="@string/guess" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_longest_streak"
        android:layout_toRightOf="@+id/button_play"
        android:text="@string/text_longest_streak"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_this_streak"
        android:layout_toLeftOf="@+id/button_guess"
        android:text="@string/text_this_streak"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_this_streak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_guess"
        android:layout_alignLeft="@+id/text_guess"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/text_longest_streak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_guess"
        android:layout_alignRight="@+id/text_guess"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button_answer_listen"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_play"
        android:layout_marginRight="40dp"
        android:layout_toLeftOf="@+id/button_play"
        android:text="---" />

    <Button
        android:id="@+id/button_guess_listen"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_play"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/button_play"
        android:text="---" />

</RelativeLayout>